<?xml version="1.0"?>
<package format="2">
  <name>soft_grasp</name>
  <version>0.0.0</version>
  <description>The Soft Grasp ROS package</description>

  <maintainer email="wakabayashi@jsk.imi.i.u-tokyo.ac.jp">Shumpei Wakabayashi</maintainer>
  <author email="wakabayashi@jsk.imi.i.u-tokyo.ac.jp">Shumpei Wakabayashi</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
